--- a/src/main/resources/static/views/Devops_Metrics.html
+++ b/src/main/resources/static/views/Devops_Metrics.html
@@ -50,7 +50,7 @@
 			<a href="./Release_History.html">Release History</a>
 			<p class='pull-right'>
 				Capability Demonstration by 
-				<a href='https://github.com/veersudhir83/predix-static-app/'>Sudheer Veeravalli</a> 
+				<a href='https://github.com/veersudhir83'>Sudheer Veeravalli</a>
 			</p>
 		</div>
 	</footer>
