--- a/src/main/resources/static/views/Release_History.html
+++ b/src/main/resources/static/views/Release_History.html
@@ -25,7 +25,7 @@
 	<div align="center">
 		<div class="header">
 			<div>			
-				<h2>All Versions of the application</h2>
+				<h2>Release History</h2>
 			</div>
 			<div></div>
 			<div class="header-logo-container">
